Details
Description
0.4.13-RC-52-g9e37046 gcc dbg lin
When trying to download NPP from the following working link
https://notepad-plus-plus.org/repository/6.x/6.9/npp.6.9.Installer.exe
from within ros via rapps, we get the following error logging:
fixme:(dll/win32/wtsapi32/wtsapi32.c:649) Stub 002101CE
|
fixme:(dll/win32/wtsapi32/wtsapi32.c:547) Stub 002101CE 0x00000000
|
(win32ss/user/ntuser/msgqueue.c:2380) err: MQ Cleanup Post Messages E17CAE38
|
fixme:(dll/win32/bcrypt/bcrypt_main.c:356) algorithm L"ECDSA_P256" not supported
|
err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"Paket konnte nicht geladen werden! Pr\00fcfen Sie Ihre Internetverbindung!"
|
If I download via dwnl from within ros, it also fails with
fixme:(dll/win32/bcrypt/bcrypt_main.c:356) algorithm L"ECDSA_P256" not supported
|
fixme:(dll/win32/urlmon/download.c:208) No cache file
|
But downloading from that exact URL does properly work from Windows XPSP3 e.g. via Pale Moon Browser (which does not use schannel), It would not work with Chrome which relies on schannel, because XPSP3 also lacks those ciphers unfortunately
on Win7 the URL can be accessed by both: Pale Moon Browser, and Chrome (as Win7 schannel does support the ciphers)
The link is working! We miss some encryption support here!
Attachments
Issue Links
- is duplicated by
-
CORE-16310 [RAPPS] wininet cannot do auto redirection
-
- Resolved
-
-
CORE-17597 Rapps in ReactOS cannot download both RisohEditor and WinHier
-
- Resolved
-
-
CORE-17880 Themes are not downloaded from RAPPS: Plex, Slste, Windows NT 3, Zeth
-
- Resolved
-
-
CORE-17798 Wine iexplore.exe triggers a certificate issue when it should not
-
- Resolved
-
-
CORE-15282 Audacity 2.2.2 fails to download via rapps
-
- Resolved
-
- relates to
-
CORE-15214 Malwarebytes 3.5.1 installer fails to start
-
- Open
-
-
CORE-17326 Switch mbedTLS to 2.16 branch (update to 2.16.11)
-
- Resolved
-
-
CORE-14198 UC Browser 7.0.185.1002 can't open google.com and other websites due to ERR_CERT_INVALID error
-
- Open
-