[0.4.8][BCRYPT][CRYPT32][PSDK] Add ECDSA P256 to known algorithms CORE-16741

Add missing structs and handler in BCryptOpenAlgorithmProvider().
Fixes CORE-16741 and similar problems.

The modern internet is not waiting for ReactOS, needed to keep the RAPPS URLs working.
fix picked from:
0.4.15-dev-3603-g e0a47b7b5ffc7d8dd5b883875200b56cec8ef923 [BCRYPT] Add BCRYPT_ECDSA_P256_ALGORITHM

To make this work, we need to sync CRYPT32 to WineStaging-3.3, picked that from:
0.4.9-dev-214-g a8b9a43ae817ea1bee11a766b57fda76400505cb [PSDK] Fix the build for msvc 2010. wincrypt.h
0.4.9-dev-208-g dedd08c38d34f3bc380dfbd734c66a1d8453fda7 [PSDK] Fix wide string literals in bcrypt.h. Should fix VC2010 build
0.4.9-dev-207-g a6265fc4b07bcb2b95c0ab901e371f6fd616efc7 [BCRYPT] Improve stubs for functions needed by crypt32 aka fix build
0.4.9-dev-194-g a6e1034289e78bab3fcb153b54bccaf164688d38 [CRYPT32] Sync with Wine Staging 3.3
0.4.9-dev-193-g e12999505856817879a248108f1ddf34f08d5c4f [PSDK] Update bcrypt.h and wincrypt.h