dll/win32/crypt32/main.c
@@ -17,9 +17,18 @@
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
  */
 
-#include "crypt32_private.h"
+#include "config.h"
+#include <stdarg.h>
+#include <stdio.h>
 
+#include "windef.h"
+#include "winbase.h"
+#include "wincrypt.h"
+#include "winreg.h"
+#include "winuser.h"
 #include "i_cryptasn1tls.h"
+#include "crypt32_private.h"
+#include "wine/debug.h"
 
 WINE_DEFAULT_DEBUG_CHANNEL(crypt);
 
