dll/win32/crypt32/object.c
@@ -17,10 +17,18 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
  */
-
+#include <stdarg.h>
+#define NONAMELESSUNION
+#include "windef.h"
+#include "winbase.h"
+#include "wincrypt.h"
+#include "mssip.h"
+#include "winuser.h"
+#include "wintrust.h"
 #include "crypt32_private.h"
-
-#include <wintrust.h>
+#include "cryptres.h"
+#include "wine/unicode.h"
+#include "wine/debug.h"
 
 WINE_DEFAULT_DEBUG_CHANNEL(crypt);
 
